Revision history for {{$dist->name}}

{{$NEXT}}

0.023     2014-02-17 01:42:41Z
          - uses of Test::TempDir switched to Path::Tiny
          - removed unneeded use of Class::Load

0.022     2013-11-01 04:01:19Z
          - prevent optional test from failing on perls < 5.10

0.021     2013-10-31 02:24:49Z
          - skip testing examples/ code when optional/undeclared prereqs are
            not available

0.020     2013-10-26 16:31:48Z
          - fixed tests from using example.com to iana.org, to ensure we get a
            302 response when needed
          - converted all uses of Test::NoWarnings to Test::Warnings
          - warnings tests bypassed during installation

0.019     2013-07-22 05:21:27Z
          - switched examples to using object-based syntax, to make it more
            clear that there is no monkey-patching (RT#86830), and other
            documentation/example cleanup

0.018     2013-03-22 18:08:50Z
          - fix test failures under newer perls by ensuring that serialized
            comparisons are always performed canonically

0.017     2013-03-22 17:48:34Z
          - really fix RT#84094 this time

0.016     2013-03-21 06:01:47Z
          - fixed handling of methods such as mirror() (RT#84094) - thanks for
            the report, Tom Hukins!

0.015     2013-02-10 00:55:18Z
          - can now create a mapping on a class name or an object where that
            class or object implements the 'request' method (from a suggestion
            by mst)

0.014     2012-12-12 18:29:39Z
          - fix advent link in pod

0.013     2012-12-12 18:24:49Z
          - silly mistake in examples/application_client_test.pl fixed
          - link to today's Perl Advent Calendar entry, about this module :)

0.012     2012-12-02 06:57:01Z
          - examples/ directory added, containing fleshed-out code snippets
            used in the article for the 2012 Perl Advent Calendar, and a